test-ui/ui/msg_send_id_invalid_receiver.stderr
error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_receiver.rs
   |
   |     let _: Id<Object, Shared> = unsafe { msg_send_id![obj, new].unwrap() };
   |                                          -------------^^^------
   |                                          |            |
   |                                          |            expected struct `objc2::runtime::Class`, found struct `objc2::runtime::Object`
   |                                          arguments to this function are incorrect
   |
   = note: expected reference `&objc2::runtime::Class`
              found reference `&objc2::runtime::Object`
note: associated function defined here
  --> $WORKSPACE/objc2/src/__macro_helpers.rs
   |
   |     unsafe fn send_message_id<A: MessageArguments>(obj: T, sel: Sel, args: A) -> Option<U>;
   |               ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_receiver.rs
   |
   |     let _: Id<Allocated<Object>, Shared> = unsafe { msg_send_id![obj, alloc].unwrap() };
   |                                                     -------------^^^--------
   |                                                     |            |
   |                                                     |            expected struct `objc2::runtime::Class`, found struct `objc2::runtime::Object`
   |                                                     arguments to this function are incorrect
   |
   = note: expected reference `&objc2::runtime::Class`
              found reference `&objc2::runtime::Object`
note: associated function defined here
  --> $WORKSPACE/objc2/src/__macro_helpers.rs
   |
   |     unsafe fn send_message_id<A: MessageArguments>(obj: T, sel: Sel, args: A) -> Option<U>;
   |               ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_receiver.rs
   |
   |     let _: Id<Object, Shared> = unsafe { msg_send_id![obj, init].unwrap() };
   |                                          -------------^^^-------
   |                                          |            |
   |                                          |            expected enum `Option`, found `&objc2::runtime::Object`
   |                                          arguments to this function are incorrect
   |
   = note:   expected enum `Option<Id<Allocated<_>, _>>`
           found reference `&objc2::runtime::Object`
note: associated function defined here
  --> $WORKSPACE/objc2/src/__macro_helpers.rs
   |
   |     unsafe fn send_message_id<A: MessageArguments>(obj: T, sel: Sel, args: A) -> Option<U>;
   |               ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_receiver.rs
   |
   |     let _: Id<Object, Shared> = unsafe { msg_send_id![cls, init].unwrap() };
   |                                          -------------^^^-------
   |                                          |            |
   |                                          |            expected enum `Option`, found `&objc2::runtime::Class`
   |                                          arguments to this function are incorrect
   |
   = note:   expected enum `Option<Id<Allocated<_>, _>>`
           found reference `&objc2::runtime::Class`
note: associated function defined here
  --> $WORKSPACE/objc2/src/__macro_helpers.rs
   |
   |     unsafe fn send_message_id<A: MessageArguments>(obj: T, sel: Sel, args: A) -> Option<U>;
   |               ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_receiver.rs
   |
   |     let _: Id<Object, Shared> = unsafe { msg_send_id![obj, init].unwrap() };
   |                                          -------------^^^-------
   |                                          |            |
   |                                          |            expected enum `Option`, found struct `Id`
   |                                          arguments to this function are incorrect
   |
   = note: expected enum `Option<Id<Allocated<_>, _>>`
            found struct `Id<objc2::runtime::Object, Shared>`
note: associated function defined here
  --> $WORKSPACE/objc2/src/__macro_helpers.rs
   |
   |     unsafe fn send_message_id<A: MessageArguments>(obj: T, sel: Sel, args: A) -> Option<U>;
   |               ^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> ui/msg_send_id_invalid_receiver.rs
   |
   |     let _: Id<Object, Shared> = unsafe { msg_send_id![obj, init].unwrap() };
   |                                          -------------^^^-------
   |                                          |            |
   |                                          |            expected struct `Allocated`, found struct `objc2::runtime::Object`
   |                                          arguments to this function are incorrect
   |
   = note: expected enum `Option<Id<Allocated<_>, _>>`
              found enum `Option<Id<objc2::runtime::Object, Shared>>`
note: associated function defined here
  --> $WORKSPACE/objc2/src/__macro_helpers.rs
   |
   |     unsafe fn send_message_id<A: MessageArguments>(obj: T, sel: Sel, args: A) -> Option<U>;
   |               ^^^^^^^^^^^^^^^

error[E0277]: the trait bound `Id<objc2::runtime::Object, Shared>: MessageReceiver` is not satisfied
  --> ui/msg_send_id_invalid_receiver.rs
   |
   |     let _: Id<Object, Shared> = unsafe { msg_send_id![obj, copy].unwrap() };
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^ the trait `MessageReceiver` is not implemented for `Id<objc2::runtime::Object, Shared>`
   |
   = help: the following other types implement trait `MessageReceiver`:
             &'a Id<T, O>
             &'a mut Id<T, objc2::rc::Owned>
   = note: required because of the requirements on the impl of `MsgSendId<Id<objc2::runtime::Object, Shared>, Id<_, _>>` for `RetainSemantics<false, false, false, true>`
   = note: this error originates in the macro `msg_send_id` (in Nightly builds, run with -Z macro-backtrace for more info)
